// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="cl-text-input test-class"
    style="width: 600px;"
  >
    <label
      class="cl-label"
      for="test-input-id"
    >
      <span
        class="cl-label__text"
      >
        Test Input
      </span>
    </label>
    <div
      class="cl-input__wrapper"
    >
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        class="cl-input__field"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="cl-inner-button"
          type="button"
        >
          <span
            class="cl-inner-button__icon cl-icon chop-icon__delete cl-icon_small"
          />
        </button>
      </span>
      <span
        aria-hidden="true"
        class="cl-error-message cl-text-input__error-message"
        id="test-input-id_error"
      >
        Error!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="cl-text-input test-class"
    style="width: 600px;"
  >
    <label
      class="cl-label"
      for="test-input-id"
    >
      <span
        class="cl-label__text"
      >
        Test Input
        <abbr
          class="cl-label__required"
          title="required"
        >
          *
        </abbr>
      </span>
    </label>
    <div
      class="cl-input__wrapper"
    >
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        aria-readonly="false"
        autocomplete="off"
        class="cl-input__field"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
      <span>
        <button
          aria-label="Clear input for Test Input"
          class="cl-inner-button"
          type="button"
        >
          <span
            class="cl-inner-button__icon cl-icon chop-icon__delete cl-icon_small"
          />
        </button>
      </span>
      <span
        aria-hidden="true"
        class="cl-error-message cl-text-input__error-message"
        id="test-input-id_error"
      >
        Error!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
